# kata-fastapi-heax

./: .copier-answers.yml  .dmypy.json  .env.example  .flake8  .gitignore  README.md  TODO  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_23_1148-190e91229d4f_initial.py  2024_10_23_1318-b6da4ed54b01_add_seats.py
fastapi_hexa/: booking.py  database.py  main.py
hooks/: pre-commit  pre-push
tests/: conftest.py  test_api.py  test_booking.py  test_database.py  test_medium.py
